--- a/izooto/src/main/res/layout/remote_view.xml
+++ b/izooto/src/main/res/layout/remote_view.xml
@@ -1,15 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
+    android:orientation="vertical"
     android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/notificationTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Text India"
-            android:drawableRight="@drawable/irctc_icon"
-            android:textSize="12dp"
-            android:textColor="@android:color/black"/>
+            android:text="title"
+            android:textSize="14sp"
+            android:textColor="#66000000"/>
+        <TextView
+            android:id="@+id/notificationMessage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="India"
+            android:textSize="14sp"
+            android:textColor="#66000000"/>
 
-</RelativeLayout>
+</LinearLayout>
