Support the Custom Notification Template

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,10 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="gray">#E69E9C9C</color>
+    <color name="black">#000000</color>
+    <color name="white">#ffffff</color>
+    <color name="notificationBg">#ffffff</color>
+    <color name="notificationMBg">#000000</color>
+
 </resources>
