--- a/izooto/src/main/res/layout/layout_custom_notification_expand.xml
+++ b/izooto/src/main/res/layout/layout_custom_notification_expand.xml
@@ -48,10 +48,10 @@
                 android:layout_height="20dp"
                 android:layout_gravity="center"
                 android:layout_marginLeft="4dp"
-                style="@style/TextAppearance.Compat.Notification.Info"
-                android:text="Share"
+                style="@style/TextAppearance.Compat.Notification.Title"
+                android:text="@string/share"
                 android:textColor="@color/white"
-                android:textSize="11sp" />
+                />
         </LinearLayout>
         <RelativeLayout
             android:layout_width="match_parent"
@@ -64,7 +64,6 @@
                 android:id="@+id/tv_notification_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="13sp"
                 android:textColor="@color/white"
                 style="@style/TextAppearance.Compat.Notification.Title"
                 android:ellipsize="end"
@@ -79,11 +78,10 @@
                     android:id="@+id/tv_btn1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Bookmark"
+                    android:text=""
                     android:visibility="gone"
                     android:textColor="@color/white"
-                    style="@style/TextAppearance.Compat.Notification.Info"
-                    android:textSize="11sp"
+                    style="@style/TextAppearance.Compat.Notification.Title"
                     android:maxLength="17"/>
                 <TextView
                     android:id="@+id/tv_btn2"
@@ -93,19 +91,17 @@
                     android:visibility="gone"
                     android:textColor="@color/white"
                     android:layout_marginLeft="10dp"
-                    style="@style/TextAppearance.Compat.Notification.Info"
-                    android:textSize="11sp"
+                    style="@style/TextAppearance.Compat.Notification.Title"
                     android:maxLength="17"/>
                 <TextView
                     android:id="@+id/tv_display_time"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="right"
-                    android:text="3:45 PM"
+                    android:text=""
                     android:textColor="@color/white"
                     android:layout_marginLeft="10dp"
-                    style="@style/TextAppearance.Compat.Notification.Info"
-                    android:textSize="11sp"
+                    style="@style/TextAppearance.Compat.Notification.Title"
                     android:maxLength="17"/>
 
 
