Bug fixes - Flutter

--- a/izooto/src/main/res/layout/layout_custom_notification.xml
+++ b/izooto/src/main/res/layout/layout_custom_notification.xml
@@ -49,6 +49,6 @@
         android:text=""
         android:textColor="@color/notificationMBg"
         android:layout_marginRight="10dp"
-        style="@style/TextAppearance.Compat.Notification.Title" />
+        style="@style/TextAppearance.Compat.Notification.Info" />
 
 </LinearLayout>
