--- a/izooto/src/main/res/layout/layout_custom_notification_expand.xml
+++ b/izooto/src/main/res/layout/layout_custom_notification_expand.xml
@@ -79,19 +79,19 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text=""
-                    android:visibility="gone"
+                    android:visibility="visible"
                     android:textColor="@color/white"
-                    style="@style/TextAppearance.Compat.Notification.Title"
+                    style="@style/TextAppearance.Compat.Notification.Info"
                     android:maxLength="17"/>
                 <TextView
                     android:id="@+id/tv_btn2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Archive"
+                    android:text=""
                     android:visibility="gone"
                     android:textColor="@color/white"
                     android:layout_marginLeft="10dp"
-                    style="@style/TextAppearance.Compat.Notification.Title"
+                    style="@style/TextAppearance.Compat.Notification.Info"
                     android:maxLength="17"/>
                 <TextView
                     android:id="@+id/tv_display_time"
@@ -101,7 +101,7 @@
                     android:text=""
                     android:textColor="@color/white"
                     android:layout_marginLeft="10dp"
-                    style="@style/TextAppearance.Compat.Notification.Title"
+                    style="@style/TextAppearance.Compat.Notification.Info"
                     android:maxLength="17"/>
 
 
