--- a/izooto/src/main/res/layout/activity_newshub.xml
+++ b/izooto/src/main/res/layout/activity_newshub.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,6 +10,7 @@
         android:id="@+id/nh_toolbar"
         android:layout_width="match_parent"
         android:layout_height="60dp"
+
         android:background="@color/iz_azure">
 
         <ImageView
@@ -35,12 +36,21 @@
             android:textStyle="bold" />
 
     </RelativeLayout>
+    <ProgressBar
+        android:id="@+id/progress_bar_alert1"
+        android:layout_width="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_centerInParent="true"
+        android:layout_height="wrap_content"/>
 
     <LinearLayout
+        android:layout_below="@+id/nh_toolbar"
+        android:id="@+id/layoutscrool"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:weightSum="100"
         android:orientation="vertical">
+
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -124,4 +134,4 @@
 
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
