--- a/izooto/src/main/res/drawable/nh_rounded_corner.xml
+++ b/izooto/src/main/res/drawable/nh_rounded_corner.xml
@@ -7,5 +7,5 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/white" />
+        android:color="@color/iz_white" />
 </shape>
