Remove the deprecated dependencies

--- a/izooto/src/main/res/layout/news_hub_items.xml
+++ b/izooto/src/main/res/layout/news_hub_items.xml
@@ -8,7 +8,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="125dp"
         android:layout_centerInParent="true"
         android:orientation="vertical"
         app:layout_constraintTop_toTopOf="parent"
@@ -18,15 +18,16 @@
         <LinearLayout
             android:id="@+id/l1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
+            android:gravity="center"
             android:layout_margin="10dp"
             android:orientation="horizontal">
 
             <FrameLayout
                 android:id="@+id/izBannerImageFrame"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="120dp"
+                android:layout_height="100dp"
                 android:background="@drawable/nh_rounded_corner">
 
                 <ImageView
