--- a/izooto/src/main/res/layout/alert_news_hub_design.xml
+++ b/izooto/src/main/res/layout/alert_news_hub_design.xml
@@ -12,37 +12,30 @@
         android:layout_height="60dp"
         android:background="@color/iz_azure">
 
-        <ImageView
-            android:id="@+id/iv_bell"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="30dp"
-            android:src="@drawable/ic_news_hub"
-            app:tint="@color/iz_white" />
 
         <TextView
             android:id="@+id/tv_toolbar_alert"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_toEndOf="@id/iv_bell"
+            android:layout_centerInParent="true"
             android:layout_marginStart="@dimen/margin_10dp"
             android:text="@string/iz_news_hub"
+            android:singleLine="true"
+            android:maxLength="20"
             android:textColor="@color/iz_white"
             android:textSize="18sp"
             android:textStyle="bold" />
 
         <ImageView
             android:id="@+id/iv_toolbar_back_button_alert"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
+            android:layout_marginLeft="20dp"
             android:src="@drawable/cancel"
-            android:layout_marginEnd="30dp"
-            android:layout_alignParentEnd="true"
-            app:tint="@color/iz_white"/>
+            app:tint="@color/iz_white" />
 
 
     </RelativeLayout>
@@ -63,7 +56,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingBottom="@dimen/margin_15dp">
+            android:paddingBottom="@dimen/margin_5dp">
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/staticListData_alert"
             android:layout_width="match_parent"
