--- a/izooto/src/main/res/layout/news_hub_items.xml
+++ b/izooto/src/main/res/layout/news_hub_items.xml
@@ -18,21 +18,22 @@
         <LinearLayout
             android:id="@+id/l1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="120dp"
             android:layout_gravity="center"
-            android:layout_margin="10dp"
+            android:gravity="center"
+            android:layout_margin="@dimen/margin_5dp"
             android:orientation="horizontal">
 
             <FrameLayout
                 android:id="@+id/izBannerImageFrame"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="120dp"
+                android:layout_height="100dp"
                 android:background="@drawable/nh_rounded_corner">
 
                 <ImageView
                     android:id="@+id/nt_banner_image"
-                    android:layout_width="100dp"
-                    android:layout_height="65dp"
+                    android:layout_width="120dp"
+                    android:layout_height="100dp"
                     android:scaleType="fitXY"/>
             </FrameLayout>
 
@@ -83,12 +84,14 @@
 
             </LinearLayout>
 
+
         </LinearLayout>
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="0.4dp"
+            android:layout_height="1dp"
             android:background="@color/iz_dawn"/>
+
 
 
     </LinearLayout>
