--- a/izooto/src/main/res/values-night/colors.xml
+++ b/izooto/src/main/res/values-night/colors.xml
@@ -6,9 +6,17 @@
     <color name="iz_gray">#E69E9C9C</color>
     <color name="iz_black">#000000</color>
     <color name="iz_white">#ffffff</color>
-    <color name="iz_notificationBg">#00000000</color>
+    <color name="iz_notificationBg">#000000</color>
     <color name="iz_notificationMBg">#ffffff</color>
+    <color name="iz_nh_brand_name_color">#1155CC</color>
     <color name="iz_azure">#1E90FF</color>
     <color name="iz_dawn">#B7A69F9F</color>
     <color name="iz_granite">#867F7F</color>
+    <color name="black">#000000</color>
+    <color name="white">#ffffff</color>
+    <color name="dawn">#B7A69F9F</color>
+    <color name="granite">#867F7F</color>
+    <color name="iz_chronometer">#99FFFFFF</color>
+    <color name="iz_button">#B3FFFFFF</color>
+    <color name="iz_timer_persistent">#1F000000</color>
 </resources>
