--- a/izooto/src/main/res/layout/layout_custom_notification.xml
+++ b/izooto/src/main/res/layout/layout_custom_notification.xml
@@ -91,7 +91,7 @@
                         android:layout_centerInParent="true"
                         android:contentDescription="@string/todo"
                         android:scaleType="fitXY"
-                        android:src="@drawable/close_btn"
+                        android:src="@drawable/iz_close_btn"
                         android:visibility="gone" />
 
 
