--- a/izooto/src/main/res/values/colors.xml
+++ b/izooto/src/main/res/values/colors.xml
@@ -11,7 +11,6 @@
     <color name="iz_notificationBg">#ffffff</color>
     <color name="iz_notificationMBg">#000</color>
     <color name="iz_nh_brand_name_color">#1155CC</color>
-    <color name="iz_azure">#1E90FF</color>
     <color name="iz_dawn">#B7A69F9F</color>
     <color name="iz_granite">#867F7F</color>
     <color name="white">#ffffff</color>
@@ -21,4 +20,17 @@
     <color name="iz_chronometer">#99000000</color>
     <color name="iz_button">#B3FFFFFF</color>
     <color name="iz_timer_persistent">#1F000000</color>
+    <color name="iZ_brandingColor">#1155CC</color>
+    <color name="inAppTransparent">#99000000</color>
+    <color name="iamCrossIconColor">#000000</color>
+    <color name="iz_azure_bg">#1E90FF</color>
+
+    <color name="iz_news_hub_bg">#E5E5E5</color>
+    <color name="iz_azure">#1155CC</color>
+    <color name="iz_news_hub_no_new_updates">#374163</color>
+    <color name="iz_news_nub_no_data_found_text">#374163</color>
+    <color name="iz_news_hub_branding_text_color">#1A1F36</color>
+    <color name="iz_news_hub_view_color">#FFFFFF</color>
+    <color name="iz_news_hub_text_color">#1A1F36</color>
+    <color name="iz_news_hub_time_color">#A5ACB8</color>
 </resources>
