--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,38 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:showIn="@layout/activity_main">
+    android:layout_height="match_parent">
 
 
-    <TextView
-        android:layout_marginTop="120dp"
-        android:layout_width="wrap_content"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:layout_gravity="center"
-        android:gravity="center_vertical"
-        android:textColor="@android:color/black"
-        android:layout_height="wrap_content"
-        style="@style/TextAppearance.Compat.Notification.Title"
-        android:text="@string/message"
-        />
+    <RelativeLayout
+        android:id="@+id/containers"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
     <Button
-        android:id="@+id/shareToken"
-        android:layout_marginTop="120dp"
         android:layout_width="wrap_content"
+        android:gravity="center"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:layout_gravity="center"
-        android:gravity="center_vertical"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
         android:textColor="@android:color/black"
         android:layout_height="wrap_content"
-        style="@style/TextAppearance.Compat.Notification.Title"
-        android:text="Share Token"
         />
 
-
-</LinearLayout>
+</RelativeLayout>
