--- a/izooto/src/main/res/values/styles.xml
+++ b/izooto/src/main/res/values/styles.xml
@@ -24,4 +24,7 @@
         <item name="android:windowBackground">@drawable/iz_nh_background</item>
     </style>
 
+    <style name="CustomAlertDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="android:windowBackground">@drawable/popup_background</item>
+    </style>
 </resources>
