--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -14,6 +14,7 @@
         android:gravity="center"
         android:textSize="18sp"
         android:textStyle="bold"
+        android:text="@string/app_name"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:textColor="@android:color/black"
